Update app runtime to leverage ZGC